Fix Java 1.8 incompatibilities in test files
Replace all Java 9+ APIs used in test code with Java 8 equivalents:
- List.of(...) → Arrays.asList(...)
- Path.of(...) → Paths.get(...)
- Files.writeString(path, str) → Files.write(path, str.getBytes(charset))
- String.isBlank() → str.trim().isEmpty()
- String.strip() → String.trim()

Affected test files: AiFieldGenerationSupportTest, AiMdDocumentCodecTest,
AiMdHeaderCodecTest, AiMdHeaderSupportTest, AiPromptPreparationSupportTest,
CommonTestFixtures, LlamaCppJniAiSummaryProviderTest, PackageIndexerTest,
SourceFileIndexerTest.

https://claude.ai/code/session_01E5EZBWqQa7oooFUJffF8bt